test/modules/vass/use-a-Math-function.good
use-a-Math-function.chpl:6: error: cannot find module or 'enum' 'fabs' for 'use' statement
