test/modules/vass/use-a-Math-function.chpl
// This test uses a module whose name matches
// the name of a private function in another module.
//
// Any private function can be used instead of 'fabs'.

use fabs;
